Version 1.3.5 (for 1.20.6)